[package]
name = "sample"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
colog = "1.3.0"
ctrlc = { version = "3.2", features = ["termination"] }
log = "0.4.22"

engine = { path = "../engine" }
graphics-adapter-vulkan = { path = "../graphics-adapter-vulkan" }
platform-adapter-winit = { path = "../platform-adapter-winit" }
